refactor: create a typesafe tracer bullet, findPage2 and prove tests pass