@@ -1,35 +1,35 @@
 package us.dot.its.jpo.ode.api.accessorTests;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.*;
+import org.bson.Document;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Answers;
+import org.mockito.Mock;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.mapping.context.MappingContext;
+import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.data.mongodb.core.aggregation.Aggregation;
+import org.springframework.data.mongodb.core.aggregation.AggregationResults;
+import org.springframework.data.mongodb.core.convert.DbRefResolver;
+import org.springframework.data.mongodb.core.mapping.MongoPersistentEntity;
+import org.springframework.data.mongodb.core.mapping.MongoPersistentProperty;
+import org.springframework.data.mongodb.core.query.Criteria;
+import us.dot.its.jpo.conflictmonitor.monitor.models.notifications.ConnectionOfTravelNotification;
+import us.dot.its.jpo.ode.api.accessors.PageableQuery;
+import us.dot.its.jpo.ode.api.models.AggregationResult2;
+import us.dot.its.jpo.ode.api.models.AggregationResultCount;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import org.bson.Document;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.runner.RunWith;
-import org.mockito.Answers;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.mongodb.core.MongoTemplate;
-import org.springframework.data.mongodb.core.aggregation.Aggregation;
-import org.springframework.data.mongodb.core.aggregation.AggregationResults;
-import org.springframework.data.mongodb.core.query.Criteria;
-
-import us.dot.its.jpo.conflictmonitor.monitor.models.notifications.ConnectionOfTravelNotification;
-import us.dot.its.jpo.ode.api.accessors.PageableQuery;
-import us.dot.its.jpo.ode.api.models.AggregationResult;
-import us.dot.its.jpo.ode.api.models.AggregationResultCount;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.when;
 
 @ExtendWith( org.mockito.junit.jupiter.MockitoExtension.class)
 public class PageableQueryTest {
@@ -38,12 +38,10 @@ public class PageableQueryTest {
     private MongoTemplate mongoTemplate;
     @Mock(answer = Answers.CALLS_REAL_METHODS)
     private PageableQuery paginatedQueryInterface;
-
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-        paginatedQueryInterface = mock(PageableQuery.class, CALLS_REAL_METHODS);
-    }
+    @Mock
+    DbRefResolver dbRefResolver;
+    @Mock
+    MappingContext<? extends MongoPersistentEntity<?>, MongoPersistentProperty> mappingContext;
 
     @Test
     void testFindPaginatedData() {
@@ -53,20 +51,21 @@ public class PageableQueryTest {
 
         List<ConnectionOfTravelNotification> expectedData = Arrays.asList(new ConnectionOfTravelNotification(),
                 new ConnectionOfTravelNotification());
-        AggregationResult<ConnectionOfTravelNotification> aggregationResult = new AggregationResult<>();
-        aggregationResult.setResults(expectedData);
+        AggregationResult2 aggregationResult = new AggregationResult2();
+        Document dataDoc = new Document();
+        dataDoc.put("results", expectedData);
+        aggregationResult.setResults(List.of(dataDoc));
         AggregationResultCount count = new AggregationResultCount();
         count.setCount(2L);
-        aggregationResult.setMetadata(Arrays.asList(count));
+        aggregationResult.setMetadata(List.of(count));
 
-        @SuppressWarnings("rawtypes")
-        AggregationResults<AggregationResult> aggregationResults = new AggregationResults<>(
-                Arrays.asList(aggregationResult), new Document());
+        AggregationResults<AggregationResult2> aggregationResults = new AggregationResults<>(
+                List.of(aggregationResult), new Document());
 
-        when(mongoTemplate.aggregate(any(Aggregation.class), eq("collectionName"), eq(AggregationResult.class)))
+        when(mongoTemplate.aggregate(any(Aggregation.class), eq("collectionName"), eq(AggregationResult2.class)))
                 .thenReturn(aggregationResults);
 
-        Page<ConnectionOfTravelNotification> result = paginatedQueryInterface.findPage(mongoTemplate,
+        Page<ConnectionOfTravelNotification> result = paginatedQueryInterface.findPage2(mongoTemplate,
                 "collectionName", pageable, criteria, sort, null, ConnectionOfTravelNotification.class);
 
         assertThat(result.getContent()).isEqualTo(expectedData);
@@ -80,13 +79,13 @@ public class PageableQueryTest {
         Sort sort = Sort.by(Sort.Direction.DESC, "dateField");
 
         @SuppressWarnings("rawtypes")
-        AggregationResults<AggregationResult> aggregationResults = new AggregationResults<>(Collections.emptyList(),
+        AggregationResults<AggregationResult2> aggregationResults = new AggregationResults<>(Collections.emptyList(),
                 new Document());
 
-        when(mongoTemplate.aggregate(any(Aggregation.class), eq("collectionName"), eq(AggregationResult.class)))
+        when(mongoTemplate.aggregate(any(Aggregation.class), eq("collectionName"), eq(AggregationResult2.class)))
                 .thenReturn(aggregationResults);
 
-        Page<ConnectionOfTravelNotification> result = paginatedQueryInterface.findPage(mongoTemplate,
+        Page<ConnectionOfTravelNotification> result = paginatedQueryInterface.findPage2(mongoTemplate,
                 "collectionName", pageable, criteria, sort, null, ConnectionOfTravelNotification.class);
 
         assertThat(result.getContent()).isEmpty();
@@ -99,14 +98,13 @@ public class PageableQueryTest {
         Criteria criteria = new Criteria();
         Sort sort = Sort.by(Sort.Direction.DESC, "dateField");
 
-        @SuppressWarnings("rawtypes")
-        AggregationResults<AggregationResult> aggregationResults = new AggregationResults<>(
+        AggregationResults<AggregationResult2> aggregationResults = new AggregationResults<>(
                 Collections.emptyList(), new Document());
 
-        when(mongoTemplate.aggregate(any(Aggregation.class), eq("collectionName"), eq(AggregationResult.class)))
+        when(mongoTemplate.aggregate(any(Aggregation.class), eq("collectionName"), eq(AggregationResult2.class)))
                 .thenReturn(aggregationResults);
 
-        Page<ConnectionOfTravelNotification> result = paginatedQueryInterface.findPage(mongoTemplate,
+        Page<ConnectionOfTravelNotification> result = paginatedQueryInterface.findPage2(mongoTemplate,
                 "collectionName", pageable, criteria, sort, null, ConnectionOfTravelNotification.class);
 
         assertThat(result.getContent()).isEmpty();
